# funk-systemd

./: .gitignore  INSTALL  LICENSE  README
patches/: 0001-funkd-splits-sockets-into-two-service-units.patch
src/: Config.mk.in  funk_dynamic.c  funk_dynamic_helpers.c  funk_dynamic_helpers.h  funk_legacy.c  funk_math.c  funk_regular.c  funk_regular_helpers.c  funk_regular_helpers.h  funk_shared.c  funk_shared_active.c  funkd.h
src/m4/: systemd.m4
units/: funk.service.in  funk.socket.in  funk_dynamic.service.in  funk_regular.service.in  funk_ro.socket.in  funk_rw.socket.in
with-autoconf/: Config.mk.in  Makefile.in  autogen.sh  configure.ac  funk_dynamic.c  funk_dynamic_helpers.c  funk_regular.c  funk_regular_helpers.c  funk_shared.c  funk_shared_active.c  funkd.h
with-autoconf/build-aux/: config.guess  config.sub  depcomp  install-sh  missing
with-automake/: Makefile.am  autogen.sh  configure.ac  funk_dynamic_helpers.h  funk_legacy.c  funk_math.c  funk_regular_helpers.h  m4  units
